# coroutine_experiments

./: .gitignore  CMakeLists.txt  README.md  asio_coro.cpp  basic_awaiter.cpp  callbacks.cpp  cb_as_coro.cpp  co_awaiter.hpp  colorrect.cpp  colorrect.h  manual_generator.cpp  meta.hpp  my_awaitable.hpp  qt_basic.cpp  qt_coro.cpp  qtcoro.hpp  run_queue.cpp  run_queue.hpp
